Remove query params from post (#30)
